# robot_cleaner

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: mission.yaml
launch/: gazebo_sim.launch  navigation.launch  slam_map.launch  task_manager.launch
maps/: map.pgm  map.yaml
models/qr_cocuk_odasi/: model.config  model.sdf
models/qr_cocuk_odasi/materials/scripts/: qr_cocuk_odasi.material
models/qr_koridor/: model.config  model.sdf
models/qr_koridor/materials/scripts/: qr_koridor.material
models/qr_mutfak/: model.config  model.sdf
models/qr_mutfak/materials/scripts/: qr_mutfak.material
models/qr_salon/: model.config  model.sdf
models/qr_salon/materials/scripts/: qr_salon.material
models/qr_yatak_odasi/: model.config  model.sdf
models/qr_yatak_odasi/materials/scripts/: qr_yatak_odasi.material
reports/: clean_report.txt
src/: get_pose.py  qr_reader_node.py  task_manager_node.py
worlds/: empty.world
