<?xml version="1.0"?>
<package format="2">
  <name>robot_cleaner</name>
  <version>0.0.1</version>
  <description>Room-based cleaning task with QR verification for TurtleBot3 (ROS1 Noetic, Gazebo)</description>

<maintainer email="nur@gmail.com">nur</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>tf</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>



